funcation embaralhar novamente

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ img{
     justify-content: center;
     background-color: #ffffff;
     width: 500px;
+    text-align: center;
 
 }
 #resultadoNomes,
