--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,84 +1,86 @@
-body{
+body {
+    background-color: #ff0000;
     margin: 0;
     padding: 0;
-    background-color: cadetblue;
-}
-
-section{
-    display: flex;
-    justify-content: center;
-}
-img{
-    height: 400px;
-}
-.container{
-    display: flex;
-    flex-direction: column;
-    background-color: #cccccc;
-    width: max-content;
-    align-items: center;
-    /* text-align: center; */
-
-    padding: 15px;
-
-}
-
-.pilares{
-    display: flex;
-    /* align-items: flex-end; */
-    justify-content: center;
-    text-align: start;
-    margin: 3px;
-}
-.names,
-.setores{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-}
-.pilares .names input,
-.pilares .setores input{
-
-    margin: 5px;
-    border-radius: 15px;
-    border: none;
-    width: 200px;
-
-}
-
-.colunas{
-    display: flex;
-    flex-flow: column;
-    width: 230px;
-}
-
-.matchPilar{
-    display: flex;
-    justify-content: center;
-    background-color: #ffffff;
-    width: 500px;
     text-align: center;
+  }
+  .container{
+      display: block;
+      text-align: center;
+      
+  }
+  .entradas{
+      display: flex;
+      justify-content: center;
 
-}
-#resultadoNomes,
-#resultadoSetores{
-    font-weight: bold;
-    margin: auto;
-    color: rebeccapurple;
-    
-}
-p{
-    border-bottom-style: solid ;
-    border-width: 1px;
-}
-
-button{
-    border: none;
-    padding: 10px;
+      
+  }
+  .nomes,
+  .departamentos{
+      width: 300px;
+  }
+  .box{
+      width: 700px;
+      margin: auto;
+      background-color: #299692;
+      border-radius: 10px;
+      padding: 20px;
+  }
+  img{
     margin: 10px;
-    font-weight: bold;
-    background-color: rebeccapurple;
+  }
+  label{
     color: #ffffff;
-    border-radius: 7px;
+    font-size: 20px;
+  }
+  input {
+    outline: none;
+    margin: 5px 10px;
+    padding: 10px;
+    border-radius: 8px;
+    border: 2px solid transparent;
+    background-color: #ffffff;
+    font-size: 14pt;
+    font-weight: 600;
+  }
+  
+  input:focus{
+    border: 2px solid white;
+    
+  }
+  
+  button {
+    
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #ff0000;
+    color: white;
+    font-size: 14pt;
+    font-weight: 600;
+  }
+  
+  button:hover {
+    background-color: cadetblue;
+  }
+  
+  button:active {
+    background-color: cyan;
+  }
+#result{
+  display: flex;
+  justify-content: center;
+    font-size: 20px;
+    font-weight: 600;
+    background: #ffffff;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 15px;
+
+}
+#resNome,
+#resSetor,
+#x{
+  padding: 10px;
 }
